# js-on-rust

./: CLAUDE.md  Cargo.toml  README.md  test_break_continue.js  test_control_flow.js  test_simple_if.js  test_simple_while.js
examples/: 01_literals.js  02_operators.js  03_functions.js  04_objects_arrays.js  05_control_flow.js  06_advanced.js  README.md  demo_calculator.js  demo_collatz.js  demo_data_structures.js  demo_factorial.js  demo_fibonacci.js  demo_sorting.js  test_for_loop.js  test_simple.js  test_vm.js
specs/: ARCHITECTURE_PLAN.md  IMPLEMENTATION_ROADMAP.md  PROJECT.md  TESTING_AND_TOOLS.md
src/: lib.rs  main.rs
src/bytecode/: compiler.rs  constant_pool.rs  disassembler.rs  function.rs  instruction.rs  mod.rs  tests.rs
src/error/: diagnostic.rs  mod.rs
src/lexer/: lexer.rs  mod.rs  new_lexer.rs  tests.rs  token.rs
src/lexer/core/: context.rs  input.rs  mod.rs  position.rs
src/lexer/scanners/: comments.rs  identifiers.rs  mod.rs  numbers.rs  operators.rs  strings.rs
src/lexer/tokens/: keywords.rs  kinds.rs  mod.rs  token.rs
src/lexer/utils/: escape.rs  mod.rs  unicode.rs  validation.rs
src/parser/: ast.rs  core.rs  expressions.rs  mod.rs  parser.rs  pratt.rs  statements.rs  tests.rs
src/parser/ast/: impls.rs  literals.rs  mod.rs  nodes.rs  operators.rs  pretty.rs
src/vm/: builtins.rs  frame.rs  machine.rs  mod.rs  value.rs
tests/: golden_bytecode_tests.rs
tests/golden/bytecode/: function_call.js  simple_arithmetic.js
